problem with integration of gradle with JUnit5

--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,12 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:5.4.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
+
+}
+
+test {
+    useJUnitPlatform()
 }
