--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
 }
